[gd_scene load_steps=4 format=3 uid="uid://dewruilf8icmd"]

[ext_resource type="Script" uid="uid://d4ox5kipk164" path="res://addons/bordr/bordr.gd" id="1_7shsu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xo765"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_drv0u"]

[node name="BorDR" type="ColorRect"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 48.0
grow_horizontal = 2
color = Color(0, 0, 0, 0.845)
script = ExtResource("1_7shsu")

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 8.0
offset_right = 40.0
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Name" type="Label" parent="Icon"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 40.0
offset_right = 312.0
grow_vertical = 2
vertical_alignment = 1

[node name="Sensor" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_xo765")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_xo765")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_xo765")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_xo765")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_xo765")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_xo765")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xo765")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_xo765")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_xo765")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_xo765")
theme_override_styles/normal = SubResource("StyleBoxEmpty_xo765")

[node name="X" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -20.0
offset_right = -14.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(1.095, 1)
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxEmpty_drv0u")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_drv0u")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_drv0u")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_drv0u")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_drv0u")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_drv0u")
theme_override_styles/hover = SubResource("StyleBoxEmpty_drv0u")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_drv0u")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_drv0u")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_drv0u")
theme_override_styles/normal = SubResource("StyleBoxEmpty_drv0u")
text = "X"

[node name="-" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -20.0
offset_right = -57.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(1.095, 1)
theme_override_colors/font_color = Color(0.517647, 0.517647, 1, 1)
theme_override_colors/font_focus_color = Color(0.517647, 0.517647, 1, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxEmpty_drv0u")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_drv0u")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_drv0u")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_drv0u")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_drv0u")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_drv0u")
theme_override_styles/hover = SubResource("StyleBoxEmpty_drv0u")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_drv0u")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_drv0u")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_drv0u")
theme_override_styles/normal = SubResource("StyleBoxEmpty_drv0u")
text = "-"

[connection signal="button_down" from="Sensor" to="." method="_on_sensor_button_down"]
[connection signal="button_up" from="Sensor" to="." method="_on_sensor_button_up"]
[connection signal="pressed" from="X" to="." method="_on_close_pressed"]
[connection signal="pressed" from="-" to="." method="_on_minimize_pressed"]
